# simple-bench

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  basic_example.cpp  benchmark_lambda.cpp  benchmark_params_args.cpp  benchmark_template.cpp  benchmark_with_cfg.cpp
cmake/: Settings.cmake
src/: CMakeLists.txt
src/simplebench/: simplebench.cpp  simplebench.hpp  simplebench_benchmark.cpp  simplebench_benchmark.hpp  simplebench_console_reporter.cpp  simplebench_console_reporter.hpp  simplebench_macros.cpp  simplebench_macros.hpp  simplebench_main.cpp  simplebench_reporter.hpp  simplebench_runner.cpp  simplebench_runner.hpp  simplebench_utils.cpp  simplebench_utils.hpp
test/: CMakeLists.txt  main.cpp
